# tangle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh.md  Tangle编程语言.md  cosmic-pulse-lovelace.md  package-lock.json
compiler/tangle-cli/: Cargo.toml
compiler/tangle-cli/src/: ast.rs  audit_support.rs  diagnostic.rs  lib.rs  main.rs  model.rs
compiler/tangle-cli/src/checker/: builtins.rs  check.rs  check_module.rs  env.rs  errors.rs  infer_return_types.rs  match_check.rs  mod.rs  option_view.rs  propagation.rs  resolve.rs  types.rs  unify.rs
compiler/tangle-cli/src/cli/: run.rs  test.rs
compiler/tangle-cli/src/codegen/: go_emitter.rs  ir_json.rs  js_emitter.rs  js_prelude.rs  mod.rs  py_emitter.rs  type_map.rs
compiler/tangle-cli/src/docgen/: html.rs  mod.rs
compiler/tangle-cli/src/frontend/: blocks.rs  compile_module.rs  headings.rs  mod.rs  source_map.rs
compiler/tangle-cli/src/incremental/: cache.rs  fingerprint.rs  mod.rs
compiler/tangle-cli/src/ir/: cache.rs  compile_to_ir.rs  graph.rs  lower.rs  lower_rule_flow.rs  lower_rule_table.rs  lower_rule_toggle.rs  lower_rule_tree.rs  mod.rs  validate.rs  visibility.rs
compiler/tangle-cli/src/lsp/: server.rs
compiler/tangle-cli/src/markdown/: mod.rs  parse_markdown.rs
compiler/tangle-cli/src/parser/: lexer.rs  mod.rs  parser.rs  type_parser.rs
compiler/tangle-cli/src/stdlib/: bindings.rs  crypto.rs  io.rs  math.rs  mod.rs  signatures.rs
compiler/tangle-cli/tests/: audit_smoke.rs
compiler/tangle-cli/tests/audit_regression/: G1_struct_symbol_resolution.rs  G2_method_param_scope.rs  G3_member_access_cascade.rs  G5_doc_drift.rs  G6_platform_diff.rs  G7_heading_prefix.rs
compiler/tangle-cli/tests/v03_phase1/: call_type_checking.rs  compat_check.rs  member_access_type.rs  stdlib_module_call.rs  stdlib_signatures.rs  toplevel_callable.rs
compiler/tangle-cli/tests/v03_phase1/fixtures/: call_arg_type_wrong.tangle.md  call_arity_ok.tangle.md  call_arity_wrong.tangle.md  call_variadic_ok.tangle.md  stdlib_fn_call.tangle.md  stdlib_module_call.tangle.md  toplevel_func_call.tangle.md
compiler/tangle-cli/tests/v03_phase2/: snapshots.rs
compiler/tangle-cli/tests/v03_phase2/snapshots/: phase2_snapshots__snapshot_flow_basic.snap  phase2_snapshots__snapshot_flow_multi_edge.snap  phase2_snapshots__snapshot_flow_subgraph.snap  phase2_snapshots__snapshot_table_basic.snap  phase2_snapshots__snapshot_table_overlap.snap  phase2_snapshots__snapshot_tree_basic.snap  phase2_snapshots__snapshot_tree_dnf.snap
compiler/tangle-cli/tests/v03_phase3/: js_codegen.rs  py_go_codegen.rs  snapshots.rs  span_tracking.rs
compiler/tangle-cli/tests/v03_phase3/snapshots/: snapshots__snapshot_go_metadata_comments.snap  snapshots__snapshot_js_decision_branches_with_priority.snap  snapshots__snapshot_py_metadata_comments.snap
compiler/tangle-cli/tests/v04_phase4/: py_go_codegen.rs  toggle_lowering.rs
compiler/tangle-cli/tests/v05_phase5/: dual_entry_fix.rs  recursion_depth.rs  toggle_cross_block.rs
compiler/tangle-cli/tests/v06_phase6/: destructure.rs  generics_inference.rs  if_narrowing.rs  invariants.rs  ir_param_types.rs  option_match.rs  return_type_inference.rs
docs/audit/: findings.md
examples/: account.tangle.md  collections.tangle.md  concurrency.tangle.md  crypto.tangle.md  io-system.tangle.md  math-data.tangle.md
examples/mvp/: README.md  order-service.tangle.md
reference/: package-lock.json  package.json  tsconfig.json
reference/src/: ast.ts  index.ts  pipeline.ts
reference/stdlib/: JSON.tangle.md  Math.tangle.md  Option.tangle.md
reference/tests/: fixtures.ts  pipeline.test.ts
schemas/: ir.json
src/: ast.ts  index.ts  model.ts  pipeline.ts
src/checker/: builtins.ts  check.ts  checkModule.ts  errors.ts  panic.ts  resolve.ts
src/cli/: main.ts
src/codegen/: jsEmitter.ts  prelude.ts
src/front-end/: blocks.ts  compileModule.ts  directives.ts  headings.ts  sourceMap.ts
src/ir/: ruleToggle.ts  visibility.ts
src/parser/: lexer.ts  parser.ts  typeParser.ts
stdlib/: IO.tangle.md  JSON.tangle.md  List.tangle.md  Map.tangle.md  Math.tangle.md  Option.tangle.md  String.tangle.md
stdlib/js/: runtime.ts
tangle-cli/: Cargo.toml
tangle-cli/src/: diagnostic.rs  lib.rs  main.rs  model.rs
test-cases/: run_diff_test.sh
test-cases/basic/: expression.tangle.md  hello.tangle.md
test-cases/errors/: payment.tangle.md
tests/: fixtures.ts  pipeline.test.ts  run_diff_test.sh
tests/audit/: diff-ir.ps1  expected_diagnostics.yaml  run-audit.ps1  verify-exit-gate.ps1
tests/audit/ir-diff/: Cargo.toml
tests/audit/ir-diff/src/: main.rs
tests/audit/lsp-probe/: Cargo.toml
tests/audit/lsp-probe/src/: main.rs
tests/checker/: check.test.ts  checkModule.test.ts  errors.test.ts  match.test.ts  resolve.test.ts  types.test.ts
tests/codegen/: jsEmitter.test.ts
(+137 files in other folders)
