[package]
name = "tangle-cli"
version = "0.1.0"
edition = "2021"
description = "Tangle compiler - Rust authority implementation"

[[bin]]
name = "tangle"
path = "src/main.rs"

[dependencies]
pulldown-cmark = { version = "0.11", default-features = false, features = ["html"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codespan-reporting = "0.11"
thiserror = "1"
tangle-std = { path = "../../library/tangle-std" }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
