[package]
name = "tangle-cli"
version = "0.2.0"
edition = "2021"
description = "Tangle compiler - Rust authority implementation"

[[bin]]
name = "tangle"
path = "src/main.rs"

[[test]]
name = "G1_struct_symbol_resolution"
path = "tests/audit_regression/G1_struct_symbol_resolution.rs"

[[test]]
name = "G2_method_param_scope"
path = "tests/audit_regression/G2_method_param_scope.rs"

[dependencies]
pulldown-cmark = { version = "0.11", default-features = false, features = ["html"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codespan-reporting = "0.11"
thiserror = "1"
tangle-std = { path = "../../library/std" }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
